# vimbed

./: Cargo.toml
crates/rvim/: Cargo.toml
crates/rvim/src/: main.rs  render.rs
crates/vimbed/: Cargo.toml
crates/vimbed/src/: buffer.rs  char_len.rs  command.rs  context.rs  lib.rs
crates/vimbed/src/mode/: command.rs  insert.rs  mod.rs  normal.rs
crates/vimbed/src/motion/: character.rs  left_right.rs  mod.rs  up_down.rs  word.rs
crates/vimbed/src/operator/: delete.rs  mod.rs
