[workspace]
resolver = "2"

members = [
    "crates/*"
]

default-members = [
    "crates/rvim",
]

# Fast-compile config for crates in this workspace
[profile.dev]
opt-level = 0
overflow-checks = true
debug-assertions = true
panic = "abort"
debug = false
codegen-units = 8
lto = false
incremental = true

# Use opt level 3 for dependencies not part of this workspace
[profile.dev.package."*"]
opt-level = 3
